--- a/BA_Frontend/Dockerfile
+++ b/BA_Frontend/Dockerfile
@@ -1,5 +1,5 @@
 #### Stage 1: Build the react application
-FROM node:19 as build
+FROM node:17-alpine3.12
 
 # Configure the main working directory inside the docker image.
 # This is the base directory used in any further RUN, COPY, and ENTRYPOINT
@@ -17,23 +17,26 @@ RUN npm install
 COPY . ./
 
 # Arguments
-ARG REACT_APP_API_BASE_URL
-ENV REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL}
+#ARG REACT_APP_API_BASE_URL
+#ENV REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL}
 
 # Build the application
-RUN npm run build
+#RUN npm run build
 
 #### Stage 2: Serve the React application from Nginx
-FROM nginx:1.23.4
+#FROM nginx:1.23.4
 
 # Copy the react build from Stage 1
-COPY --from=build /app/build /var/www
+#COPY --from=build /app/build /var/www
 
 # Copy our custom nginx config
 #COPY nginx.conf /etc/nginx/nginx.conf
+
+#RUN npm start
 
 # Expose port 80 to the Docker host, so we can access it
 # from the outside.
 EXPOSE 3000
 
-ENTRYPOINT ["nginx","-g","daemon off;"]
+#ENTRYPOINT ["nginx","-g","daemon off;"]
+CMD ["npm", "start"]
