--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,30 +33,33 @@ services:
 
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
       - backend
-      - frontend
+      #- frontend
 
   # Frontend Service
   app-client:
     build:
       context: BA_Frontend # Use an image built from the specified dockerfile in the `polling-app-client` directory.
       dockerfile: Dockerfile
-      args:
-        REACT_APP_API_BASE_URL: http://127.0.0.1:8080/api
+      #args:
+        #REACT_APP_API_BASE_URL: http://127.0.0.1:8080/api
     #stdin_open: true
     #tty: true
     ports:
       - "3000:3000" # Map the exposed port 3000 on the container to port 9090 on the host machine
     depends_on:
       - app-server
-    networks:
-      - frontend
+    volumes:
+      - myFiles:/uploads
+    #networks:
+      #- frontend
 
 
 # Volumes
 volumes:
   db-data:
+  myFiles:
 
 # Networks to be created to facilitate communication between containers
 networks:
   backend:
-  frontend:
+  #frontend:
